--- a/config/packages.tex
+++ b/config/packages.tex
@@ -13,6 +13,8 @@
 \usepackage{pdfpages}
 \usepackage[style=numeric,
             sorting=none,
+            defernumbers=true,
+            refsection=chapter,
             bibstyle=gb7714-2015,
             citestyle=gb7714-2015]{biblatex}
 \usepackage{siunitx}
