--- a/content/proposal/proposal/proposal.tex
+++ b/content/proposal/proposal/proposal.tex
@@ -4,6 +4,8 @@
 \input{content/proposal/proposal/background}
 \input{content/proposal/proposal/content}
 \input{content/proposal/proposal/plan}
+\cite{tikz}
 
 \newpage
-\printbibliography[title={参考文献}]
+\printbibliography[heading=subbibliography]
+\addcontentsline{toc}{section}{参考文献}
