--- a/content/proposal/review/review.tex
+++ b/content/proposal/review/review.tex
@@ -14,3 +14,7 @@
 \subsection{存在问题}
 
 \section{研究展望}
+
+\cite{testbib}
+\printbibliography[heading=subbibliography]
+\addcontentsline{toc}{section}{参考文献}
