--- a/pages/proposal/design/post.tex
+++ b/pages/proposal/design/post.tex
@@ -2,4 +2,4 @@
 \pagestyle{empty}
 
 \input{pages/proposal/design/proposaleval}
-\input{pages/proposal/design/midcheckeval}
+% \input{pages/proposal/design/midcheckeval}
