--- a/reference/ref.bib
+++ b/reference/ref.bib
@@ -1,4 +1,10 @@
 % use `texdoc biblatex` to get help
+@www{testbib,
+    title = {test bib},
+    author = {dai-z},
+    year = {2018},
+    url = {https://www.cse.zju.edu.cn},
+}
 @www{zjuthesisrules,
     title = {浙江大学本科生毕业论文（设计）编写规则},
     author = {浙江大学本科生院},
