--- a/pages/proposal/cover.tex
+++ b/pages/proposal/cover.tex
@@ -19,7 +19,7 @@
     {
         本~科~生~毕~业~设~计
         \\ \vskip 24pt
-        开题报告
+        文献综述和开题报告
     }
 \end{center}
 
@@ -36,8 +36,7 @@
     \begin{center}
         \bfseries \zihao{3}
         \begin{tabularx}{.7\textwidth}{>{\fangsong}l >{\fangsong}X<{\centering}}
-            学生姓名   &  \uline{\hfill} \\
-            学生学号   &  \uline{\hfill} \\
+            姓名与学号   &  \uline{\hfill} \\
             指导教师   &  \uline{\hfill} \\
             年级与专业  &  \uline{\hfill} \\
             所在学院   &  \uline{\hfill} \\
@@ -49,10 +48,9 @@
     \begin{center}
         \bfseries \zihao{3}
         \begin{tabularx}{.7\textwidth}{>{\fangsong}l >{\fangsong}X<{\centering}}
-            学生姓名   &  \uline{\hfill \StudentName \hfill} \\
-            学生学号   &  \uline{\hfill \StudentID \hfill} \\
+            姓名与学号   &  \uline{\hfill \StudentName \hfill} \\
             指导教师   &  \uline{\hfill \AdvisorName \hfill} \\
-            年级与专业  &  \uline{\hfill \mbox{\Grade}级\Major \hfill} \\
+            年级与专业  &  \uline{\hfill \mbox\Major{\Grade}级 \hfill} \\
             所在学院   &  \uline{\hfill \Department \hfill} \\
         \end{tabularx}
     \end{center}
