--- a/pages/proposal/design/previous.tex
+++ b/pages/proposal/design/previous.tex
@@ -1,7 +1,7 @@
 {
     \setlength{\parindent}{0em}
     \par {\zihao{4}\bfseries 一、题目：\uline{\hfill \Title \hfill}}
-    \par {\zihao{4}\bfseries 二、指导教师对开题报告的具体要求：}
+    \par {\zihao{4}\bfseries 二、指导教师对文献综述和开题报告的具体要求：}
 }
 
 \mbox{} \vfill
