--- a/pages/proposal/design/proposaleval.tex
+++ b/pages/proposal/design/proposaleval.tex
@@ -1,26 +1,16 @@
 \cleardoublestylepage{empty}
 
 {
-    \chapternonum{毕业设计开题报告、外文翻译的考核}
+    \chapter*{毕业论文文献综述和开题报告考核}
     \bfseries
 
     {
         \zihao{4}
-        \noindent 导师对开题报告、外文翻译的评语及成绩评定：
+        \noindent 一、对文献综述、外文翻译和开题报告评语及成绩评定：
     }
 
 
-    \vspace{50mm}
-    \designproposaleval[15][5]
-    \signature{导师签名}
-
-    {
-        \zihao{4}
-        \noindent 学院盲审专家对开题报告、外文翻译的评语及成绩评定：
-    }
-
-
-    \mbox{} \vfill
-    \designproposaleval
-    \signature{开题报告审核负责人（签名/签章）}
+    \vspace{150mm}
+    \designproposaleval[~~~~~~~~~~~~~~~~~~][~~~~~~~~~~~~~~~~~~][~~~~~~~~~~~~~~~~~~]
+    \signature{开题报告答辩小组负责人（签名）}
 }
