--- a/zjuthesis.tex
+++ b/zjuthesis.tex
@@ -4,17 +4,16 @@
 % Update: https://github.com/TheNetAdmin/zjuthesis/releases
 
 \documentclass[
-    StudentName = 姓名,
-    StudentID   = 学号,
-    AdvisorName = 指导教师,
+    StudentName = 名字学号, % 姓名与学号：
+    AdvisorName = 导师,
     Grade       = 2014,   % only the year, no `级`
-    Major       = 专业,
-    Department  = 学院,
-    Title       = 毕业论文/设计题目,
-    SubmitDate  = 递交日期,
-    MajorFormat = cs,
+    Major       = 专业, % （专业）xx级
+    Department  = 控制科学与工程学院,
+    Title       = 论文题目,
+    SubmitDate  = xxxx年xx月xx日,
+    MajorFormat = cse,
     Type        = design, % `thesis` or `design`
-    Period      = final,  % `final`  or `proposal`
+    Period      = proposal,  % `final`  or `proposal`
     BlindReview = false   % `true`   or `false`
 ]{config/zjuthesis}
 
