Modified for cse proposal

--- a/config/format/major/cse/fonts.tex
+++ b/config/format/major/cse/fonts.tex
@@ -1,1 +1,7 @@
+% 正文小四 中文仿宋 
 \setCJKmainfont{FangSong}
+\zihao{-4}
+% Times New Roman for English
+\setmainfont{Times New Roman}
+% Set font for reference
+\renewcommand{\bibfont}{\zihao{5}}
