--- a/config/format/major/cse/format.tex
+++ b/config/format/major/cse/format.tex
@@ -1,4 +1,5 @@
 \input{config/format/major/cse/packages}
 
 \input{config/format/major/cse/fonts}
+\input{config/format/major/cse/layout}
 \input{config/format/major/cse/code}
