--- a/pages/proposal/design/post.tex
+++ b/pages/proposal/design/post.tex
@@ -1,5 +1,8 @@
-\cleardoublestylepage{empty}
-\pagestyle{empty}
+% \let\cleardoublepage\clearpage
+% \setcounter{page}{1}
+
+% \cleardoublestylepage{empty}
+% \pagestyle{empty}
 
 \input{pages/proposal/design/proposaleval}
 % \input{pages/proposal/design/midcheckeval}
