--- a/pages/proposal/design/proposaleval.tex
+++ b/pages/proposal/design/proposaleval.tex
@@ -1,7 +1,13 @@
-\cleardoublestylepage{empty}
+\let\cleardoublepage\clearpage
+% \cleardoublestylepage{empty}
+\pagestyle{empty}
+\setcounter{page}{1}
+
 
 {
     \chapter*{毕业论文文献综述和开题报告考核}
+    \thispagestyle{empty}
+
     \bfseries
 
     {
