--- a/pages/proposal/post.tex
+++ b/pages/proposal/post.tex
@@ -1,5 +1,8 @@
-\cleardoublestylepage{empty}
-\thispagestyle{empty}
+% \cleardoublestylepage{empty}
+% \setcounter{page}{1}
+
+% \thispagestyle{empty}
+% \pagestyle{empty}
 
 \ifthenelse{\equal{\Type}{design}}
 {
