--- a/content/proposal/review/review.tex
+++ b/content/proposal/review/review.tex
@@ -1,20 +1,47 @@
-\cleardoublepage
+% \let\cleardoublepage\clearpage
 \chapter{文献综述}
 
 \section{背景介绍}
 
+\begin{figure}[htbp]
+\includegraphics{logo/zju.pdf}
+\caption{abc}
+\end{figure}
+
+
+\begin{table}[htbp]
+ \caption{\label{tab:test}test}
+ \begin{tabular}{lcl}
+  \toprule
+  。。 & 。。 & 。。 \\
+  \midrule
+ 。。 & 。。 & 。。 \\
+ 。。 & 。。 & 。。 \\
+ 。。 & 。。 & 。。 \\
+  \bottomrule
+ \end{tabular}
+\end{table}
+
+
 \subsection{小节}
 
 \subsection{小节}
+
+\clearpage
 
 \section{国内外研究现状}
 
-\subsection{研究方向及进展}
+    \subsection{研究方向及进展}
 
-\subsection{存在问题}
+    \subsection{存在问题}
 
 \section{研究展望}
+terst
+
+\cite{testbib2}
 
 \cite{testbib}
+
 \printbibliography[heading=subbibliography]
 \addcontentsline{toc}{section}{参考文献}
+
