--- a/pages/proposal/previous.tex
+++ b/pages/proposal/previous.tex
@@ -1,4 +1,5 @@
-\cleardoublestylepage{empty}
+\let\cleardoublepage\clearpage
+\clearpage
 \thispagestyle{empty}
 
 \ifthenelse{\equal{\Type}{design}}
