Add blank pages

--- a/pages/proposal/previous.tex
+++ b/pages/proposal/previous.tex
@@ -1,5 +1,4 @@
-\let\cleardoublepage\clearpage
-\clearpage
+\cleardoublestylepage{empty}
 \thispagestyle{empty}
 
 \ifthenelse{\equal{\Type}{design}}
