--- a/config/packages.tex
+++ b/config/packages.tex
@@ -15,6 +15,7 @@
             sorting=none,
             defernumbers=true,
             refsection=chapter,
+            seconds=true,
             bibstyle=gb7714-2015,
             citestyle=gb7714-2015]{biblatex}
 \usepackage{siunitx}
