--- a/zjuthesis.tex
+++ b/zjuthesis.tex
@@ -15,7 +15,7 @@
     Type        = design, % `thesis` or `design`
     Period      = proposal,  % `final`  or `proposal`
     BlindReview = false   % `true`   or `false`
-]{config/zjuthesis}
+]{zjuthesis}
 
 \newcommand{\inputfinal}
 {
